Fixed small typo.

--- a/app/views/bugs/index.html.erb
+++ b/app/views/bugs/index.html.erb
@@ -19,7 +19,7 @@ end
 <table>
   <tr>
     <th>Title</th>
-    <th>Project</th><b>
+    <th>Project</th>
     <th>Project homepage</th>
     <th>Programming language</th>
     <th>Assigned to</th>
